--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "mainJS": "git subtree push --prefix dist origin gh-pages",
     "watch": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack" 
   },
   "repository": {
     "type": "git",
